--- a/responsive-web-design-projects/build-a-survey-form/index.html
+++ b/responsive-web-design-projects/build-a-survey-form/index.html
@@ -27,8 +27,19 @@
         <input id="radio3" value="radio3" type="radio" name="radio"/>
         <label for="radio3">Radio 3</label>
       </fieldset>
+      <fieldset>
+        <legend>Checkboxes</legend>
+        <input id="checkbox1" value="checkbox1" type="checkbox" name="checkbox"/>
+        <label for="checkbox1">Checkbox 1</label>
+        <input id="checkbox2" value="checkbox2" type="checkbox" name="checkbox"/>
+        <label for="checkbox2">Checkbox 2</label>
+        <input id="checkbox3" value="checkbox3" type="checkbox" name="checkbox"/>
+        <label for="checkbox3">Checkbox 3</label>
+      </fieldset>
+      <label for="textarea">Please leave additional comments:</label>
+      <textarea id="textarea" name="textarea"></textarea>
+      <button id="submit" value="submit">Submit</button>
     </form>
-
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
