--- a/responsive-web-design-projects/build-a-survey-form/index.html
+++ b/responsive-web-design-projects/build-a-survey-form/index.html
@@ -2,42 +2,55 @@
 <html>
   <head>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Acme|Creepster&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1 id="title">Popcorn</h1>
-    <p id="description">Let's talk about popcorn!</p>
+    <h1 id="title">Halloween</h1>
+    <p id="description">Let's get spooky!</p>
     <form id="survey-form">
-      <label id="name-label" for="name">Name:</label>
-      <input id="name" type="text" placeholder="Please enter your name" required />
-      <label id="email-label" for="email">Email:</label>
-      <input id="email" type="email" placeholder="Please enter your email" required />
-      <label id="number-label" for="number">Number:</label>
-      <input id="number" type="number" placeholder="Please enter a number" min="1" max="100" required />
-      <select id="dropdown" name="dropdown">
-        <option value="option1">Option 1</option>
-        <option value="option2">Option 2</option>
-        <option value="option3" selected>Option 3</option>
+      <label class="left" id="name-label" for="name">Name:</label>
+      <input class="right" id="name" type="text" placeholder="Please enter your name" required />
+      <label class="left" id="email-label" for="email">Email:</label>
+      <input class="right" id="email" type="email" placeholder="Please enter your email" required />
+      <label class="left" id="number-label" for="number">Age:</label>
+      <input class="right" id="number" type="number" placeholder="Please enter your age" min="0" max="100" required />
+      <label class="left" for="dropdown">What's your favorite thing about Halloween?</label>
+      <select class="right" id="dropdown" name="dropdown">
+        <option value="select-an-option" disabled>Select an Option</option>
+        <option value="costumes">Costumes</option>
+        <option value="candy">Candy</option>
+        <option value="decorations" selected>Decorations</option>
+        <option value="other">Other</option>
       </select>
-      <fieldset>
-        <legend>Radio buttons</legend>
-        <input id="radio1" value="radio1" type="radio" name="radio"/>
-        <label for="radio1">Radio 1</label>
-        <input id="radio2" value="radio2" type="radio" name="radio"/>
-        <label for="radio2">Radio 2</radio>
-        <input id="radio3" value="radio3" type="radio" name="radio"/>
-        <label for="radio3">Radio 3</label>
+      <fieldset class="costume-fieldset">
+        <div class="inner-fieldset">
+          <legend class="left">If you could pick one costume, what would you be?</legend>
+          <div class="right">
+            <input id="witch" value="witch" type="radio" name="radio"/>
+            <label for="witch">Witch</label>
+            <input id="ghost" value="ghost" type="radio" name="radio"/>
+            <label for="ghost">Ghost</label>
+            <input id="scarecrow" value="scarecrow" type="radio" name="radio"/>
+            <label for="scarecrow">Scarecrow</label>
+            
+          </div>
+        </div>
       </fieldset>
-      <fieldset>
-        <legend>Checkboxes</legend>
-        <input id="checkbox1" value="checkbox1" type="checkbox" name="checkbox"/>
-        <label for="checkbox1">Checkbox 1</label>
-        <input id="checkbox2" value="checkbox2" type="checkbox" name="checkbox"/>
-        <label for="checkbox2">Checkbox 2</label>
-        <input id="checkbox3" value="checkbox3" type="checkbox" name="checkbox"/>
-        <label for="checkbox3">Checkbox 3</label>
+      <fieldset class="candy-fieldset">
+        <div class="inner-fieldset">
+          <legend class="left">What candy would you like to get?</legend>
+          <div class="right">
+            <input id="snickers" value="snickers" type="checkbox" name="checkbox"/>
+            <label for="snickers">Snickers</label>
+            <input id="kit-kat" value="kit-kat" type="checkbox" name="checkbox"/>
+            <label for="kit-kat">Kit Kat</label>
+            <input id="reeses" value="reeses" type="checkbox" name="checkbox"/>
+            <label for="reeses">Reese's</label>
+          </div>
+        </div>
       </fieldset>
-      <label for="textarea">Please leave additional comments:</label>
-      <textarea id="textarea" name="textarea"></textarea>
+      <label class="left" for="textarea">Please tell us any other thoughts you have about Halloween:</label>
+      <textarea class="right" id="textarea" name="textarea"></textarea>
       <button id="submit" value="submit">Submit</button>
     </form>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
