--- a/responsive-web-design-projects/build-a-product-landing-page/index.html
+++ b/responsive-web-design-projects/build-a-product-landing-page/index.html
@@ -5,6 +5,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     </head>
     <body>
+      <!-- Header with logo and navigation links -->
       <header class="flex" id="header">
         <img id="header-img" src="https://i.etsystatic.com/17857814/r/il/4dd21a/1661019588/il_fullxfull.1661019588_3ocw.jpg" alt="logo"/>
         <nav id="nav-bar" class="flex">
@@ -14,11 +15,17 @@
         </nav>
       </header>
       <main class="flex flex-column">
+
+        <!-- Main header -->
         <h1>Clean your bike at an affordable price.</h1>
+
+        <!-- Form to enter/submit email -->
         <form id="form" class="flex flex-column" action="https://www.freecodecamp.com/email-submit">
           <input id="email" type="email" name="email" placeholder="Please enter your email" autofocus/>
           <input id="submit" type="submit" name="submit" value="Learn More"/>
         </form>
+
+        <!-- Lists the three services available in a row. Becomes column on mobile... supposedly -->
         <div id="services" class="flex flex-column">
           <h2>Take a look at our following packages. We get your bike clean- hassle free!</h2>
           <div class="services-container flex">
@@ -39,15 +46,20 @@
             </div>
           </div>
         </div>
+
+        <!-- Gives a short video and information of the company. Video is a random one off of YouTube -->
         <div id="about" class="flex flex-column">
           <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/A8f58asClGE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
+
+        <!-- Lists contact information for the company -->
         <div id="contact" class="flex">
           <p>Contact Us! <br /> 678 Street Road <br /> City, State 12345 <br />123-456-7891</p>
-          
         </div>
       </main>
+
+      <!-- Lists copyright and company name -->
       <footer>
         <div>&copy; 2019, Wash-N-Go</div>
       </footer>
