Commented out the script in html

--- a/responsive-web-design-projects/build-a-technical-documentation-page/index.html
+++ b/responsive-web-design-projects/build-a-technical-documentation-page/index.html
@@ -56,6 +56,8 @@
         <p>Lorem ipsum dolor sit amet, adhuc referrentur ut eum, minimum pertinacia eum te, sea partem definiebas in. Vix et quod tempor. At sit dolorum adversarium. Ut sit populo vivendo mediocritatem, reque ullum constituam ex per. Cu est quem tractatos, perfecto hendrerit ea eam. Debitis tibique te nec.<p>
       </section>
     </main>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <!-- Use this to run the tests!
+      <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    -->
   </body>
 </html>
