--- a/responsive-web-design-projects/build-a-product-landing-page/index.html
+++ b/responsive-web-design-projects/build-a-product-landing-page/index.html
@@ -63,7 +63,9 @@
       <footer>
         <div>&copy; 2019, Wash-N-Go</div>
       </footer>
-      <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+      <!-- Use this to run the tests!
+        <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+      -->
     </body>
 </html>
   
