--- a/responsive-web-design-projects/build-a-survey-form/index.html
+++ b/responsive-web-design-projects/build-a-survey-form/index.html
@@ -73,6 +73,8 @@
       <!-- Submit -->
       <button id="submit" value="submit">Submit</button>
     </form>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <!-- Use this to run the tests!
+      <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    -->
   </body>
 </html>
