--- a/responsive-web-design-projects/build-a-tribute-page/index.html
+++ b/responsive-web-design-projects/build-a-tribute-page/index.html
@@ -30,6 +30,8 @@
       <a id="tribute-link" href="https://en.wikipedia.org/wiki/Tortoise" target="_blank">If you want to learn more about tortoises, please check out this article!</a>
     </main>
     
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <!-- Use this to run the tests!
+      <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    -->
   </body>
 </html>
