Added target="_blank" to project tiles

--- a/responsive-web-design-projects/build-a-personal-portfolio-webpage/index.html
+++ b/responsive-web-design-projects/build-a-personal-portfolio-webpage/index.html
@@ -26,56 +26,56 @@
         <header>Look at all those <span class="line-through">chickens</span> projects</header>
         <div class="projects-container">
           <!-- Technical Documentation Page -->
-          <a class="project-link" href="https://codepen.io/lindsaysofia/full/bGbmOxV">
+          <a class="project-link" href="https://codepen.io/lindsaysofia/full/bGbmOxV" target="_blank">
             <div class="project-tile">
               <img class="project-img" src="https://screenshot.codepen.io/2333631.bGbmOxV.small.6a8a398f-dc2c-4fa4-86e0-4f59941446b5.png" alt="screenshot of project"/>
               <p>Technical Documentation Page</p>
             </div>
           </a>
           <!-- Product Landing Page -->
-          <a class="project-link" href="https://codepen.io/lindsaysofia/full/gOYdmBP">
+          <a class="project-link" href="https://codepen.io/lindsaysofia/full/gOYdmBP" target="_blank">
             <div class="project-tile">
               <img class="project-img" src="https://screenshot.codepen.io/2333631.gOYdmBP.small.a3ffeba2-cc60-410d-af12-d9050cbc5d24.png" alt="screenshot of project"/>
               <p>Product Landing Page</p>
             </div>
           </a>
           <!-- Survey Form -->
-          <a class="project-link" href="https://codepen.io/lindsaysofia/full/RwbJZeo">
+          <a class="project-link" href="https://codepen.io/lindsaysofia/full/RwbJZeo" target="_blank">
             <div class="project-tile">
               <img class="project-img" src="https://screenshot.codepen.io/2333631.RwbJZeo.small.a8e45fc6-ba14-4c2c-a130-01d94a5a186f.png" alt="screenshot of project"/>
               <p>Survey Form</p>
             </div>
           </a>
           <!-- Tribute Page -->
-          <a class="project-link" href="https://codepen.io/lindsaysofia/full/VwZXprp">
+          <a class="project-link" href="https://codepen.io/lindsaysofia/full/VwZXprp" target="_blank">
             <div class="project-tile">
               <img class="project-img" src="https://screenshot.codepen.io/2333631.VwZXprp.small.86943b52-8be7-49f3-b099-74f255d2d971.png" alt="screenshot of project"/>
               <p>Tribute Page</p>
             </div>
           </a>
           <!-- Markdown Previewer -->
-          <a class="project-link" href="https://codepen.io/lindsaysofia/full/OaRoRo">
+          <a class="project-link" href="https://codepen.io/lindsaysofia/full/OaRoRo" target="_blank">
             <div class="project-tile">
               <img class="project-img" src="https://screenshot.codepen.io/2333631.OaRoRo.small.0ae6b500-e5d6-4053-87f5-406fcc2c37ab.png" alt="screenshot of project"/>
               <p>Markdown Previewer</p>
             </div>
           </a>
           <!-- Random Quote Machine -->
-          <a class="project-link" href="https://codepen.io/lindsaysofia/full/dgrRQg">
+          <a class="project-link" href="https://codepen.io/lindsaysofia/full/dgrRQg" target="_blank">
             <div class="project-tile">
               <img class="project-img" src="https://screenshot.codepen.io/2333631.dgrRQg.small.784398e5-aa4b-4cba-8062-8bcef72be620.png" alt="screenshot of project"/>
               <p>Random Quote Machine</p>
             </div>
           </a>
           <!-- Tic-Tac-Toe -->
-          <a class="project-link" href="https://codepen.io/lindsaysofia/pen/oaWeWM">
+          <a class="project-link" href="https://codepen.io/lindsaysofia/pen/oaWeWM" target="_blank">
             <div class="project-tile">
               <img class="project-img" src="https://screenshot.codepen.io/2333631.oaWeWM.small.b6ac72b5-9d88-4a3c-9fdd-ea988b6ac366.png" alt="screenshot of project"/>
               <p>Tic-Tac-Toe</p>
             </div>
           </a>
-          <!-- I'll have more projects one day :) -->
         </div>
+        <!-- I'll have more projects one day :) -->
       </section>
       <!-- Contact -->
       <section id="contact">
