--- a/front-end-libraries-projects/build-a-pomodoro-clock/public/index.html
+++ b/front-end-libraries-projects/build-a-pomodoro-clock/public/index.html
@@ -30,7 +30,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!-- uncomment to view tests <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
+    <!-- uncomment to view FCC tests! <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
