--- a/data-visualization-projects/visualize-data-with-a-bar-chart/index.html
+++ b/data-visualization-projects/visualize-data-with-a-bar-chart/index.html
@@ -4,19 +4,16 @@
     <script src = "https://d3js.org/d3.v4.min.js"></script>
     <style>
       .bar {
-        width: 25px;
-        height: 100px;
-        display: inline-block;
-        background-color: blue;
-        margin: 2px;
+        fill: rgb(43, 166, 149);
       }
 
       .bar:hover {
-        fill: brown;
+        fill: rgb(17, 66, 59);
       }
     </style>
   </head>
   <body>
+    <h1 id="title">United States GDP</h1>
     <script>
       fetch('https://raw.githubusercontent.com/freeCodeCamp/ProjectReferenceData/master/GDP-data.json')
       .then(response => response.json())
@@ -24,14 +21,14 @@
         const w = 900;
         const h = 600;
         const padding = 60;
-        const c = 30;
+        const c = 2;
       
         const xScale = d3.scaleTime()
-                         .domain([1947, 2015])
+                         .domain([new Date('1947-01-01'), new Date('2015-07-01')])
                          .range([padding, w - padding]);
 
-        const yScale = d3.scaleTime()
-                         .domain([data.data[0][1], data.data[data.data.length - 1][1]])
+        const yScale = d3.scaleLinear()
+                         .domain([0, data.data[data.data.length - 1][1]])
                          .range([h - padding, padding]);
 
         const svg = d3.select('body')
@@ -43,14 +40,16 @@
            .data(data.data)
            .enter()
            .append('rect')
-           .attr('x', (d, i) => {
-             let date = d[0].split('-');
-           })
-           .attr('y', (d, i) => h - d[1])
-           .attr('height', (d, i) => c * d[1])
+           .attr('x', d => xScale(new Date(d[0])))
+           .attr('y', d => yScale(d[1]))
+           .attr('height', d => h - yScale(d[1]) - padding)
            .attr('width', c)
+           .attr('data-date', d => d[0])
+           .attr('data-gdp', d => d[1])
            .attr('class', 'bar')
            .append('title')
+           .attr('id', 'tooltip')
+           .attr('data-date', d => d)
            .text(d => d);
 
         const xAxis = d3.axisBottom(xScale);
