commented out tests script

--- a/data-visualization-projects/visualize-data-with-a-bar-chart/index.html
+++ b/data-visualization-projects/visualize-data-with-a-bar-chart/index.html
@@ -101,7 +101,7 @@
            .call(yAxis);
       });
     </script>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <!-- Uncomment to see fcc tests! <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
     <!-- Got a lot of help for the tooltip from https://www.d3-graph-gallery.com/graph/interactivity_tooltip.html -->
   </body>
 </html>
