I FORGOT BRACKETS also need to do y axis

--- a/data-visualization-projects/visualize-data-with-a-scatterplot-graph/index.html
+++ b/data-visualization-projects/visualize-data-with-a-scatterplot-graph/index.html
@@ -27,23 +27,25 @@
         const w = 900;
         const h = 600;
         const padding = 60;
-        const radius = 15;
+        const radius = 3;
 
-        const formatTime = d3.timeFormat('%M:%S') // takes date, returns string.
+        const formatYear = d3.timeFormat('%Y'); // takes date, returns string.
+        const parseYear = d3.timeParse('%Y'); // takes string, returns date.
+        const formatTime = d3.timeFormat('%M:%S'); // takes date, returns string.
         const parseTime = d3.timeParse('%M:%S'); // takes string, returns date.
 
-        const minX = d3.min(data, d => d.Year);
-        const maxX = d3.max(data, d => d.Year);
+        const minX = d3.min(data, d => d.Year) - 1;
+        const maxX = d3.max(data, d => d.Year) + 1;
         const minY = data[0].Time;
         const maxY = data[data.length - 1].Time;
 
-        const xScale = d3.scaleLinear()
-                         .domain([minX, minY])
-                         .range(padding, w - padding);
+        const xScale = d3.scaleTime()
+                         .domain([parseYear(minX), parseYear(maxX)])
+                         .range([padding, w - padding]);
 
         const yScale = d3.scaleTime()
                          .domain([parseTime(minY), parseTime(maxY)])
-                         .range(h - padding, padding);
+                         .range([padding, h - padding]);
         
         const svg = d3.select('body')
                       .append('svg')
@@ -55,7 +57,7 @@
            .data(data)
            .enter()
            .append('circle')
-           .attr('cx', d => xScale(d.Year))
+           .attr('cx', d => xScale(parseYear(d.Year)))
            .attr('cy', d => yScale(parseTime(d.Time)))
            .attr('r', radius);
 
