changed var to let

--- a/data-visualization-projects/visualize-data-with-a-bar-chart/index.html
+++ b/data-visualization-projects/visualize-data-with-a-bar-chart/index.html
@@ -68,7 +68,7 @@
                  .attr('data-date', d[0]);
         };
 
-        var mouseleave = function(d) {
+        let mouseleave = function(d) {
           tooltip.style('opacity', 0);
         };
 
