commented out tests

--- a/data-visualization-projects/visualize-data-with-a-heat-map/index.html
+++ b/data-visualization-projects/visualize-data-with-a-heat-map/index.html
@@ -145,6 +145,6 @@
              
       });
     </script>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <!-- uncomment to view tests: <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
   </body>
 </html>
