idk what im doing tbh

--- a/data-visualization-projects/visualize-data-with-a-choropleth-map/index.html
+++ b/data-visualization-projects/visualize-data-with-a-choropleth-map/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Choropleth Map</title>
+    <script src = "https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://unpkg.com/topojson@3"></script>
     <style>
+      body {
+        height: 100vh;
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
     </style>
   </head>
   <body>
+    <h1 id="title">United States Educational Attainment</h1>
+    <h2 id="description">Percentage of adults age 25 and older with a bachelor's degree or higher (2010-2014)</h2>
     <script></script>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
