--- a/data-visualization-projects/visualize-data-with-a-choropleth-map/index.html
+++ b/data-visualization-projects/visualize-data-with-a-choropleth-map/index.html
@@ -120,6 +120,6 @@
            .on("mouseleave", mouseleave);           
       });
     </script>
-    <!-- uncomment to see fcc tests: <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
